--- a/views/register.jade
+++ b/views/register.jade
@@ -7,13 +7,17 @@ block content
     br
     form(role='form', action="/register",method="post", style='max-width: 300px;')
       .form-group
+          input.form-control(type='text', name="fname", placeholder='First name')
+      .form-group
+          input.form-control(type='text', name="lname", placeholder='Last name')
+      .form-group
           input.form-control(type='text', name="username", placeholder='Enter Username')
       .form-group
           input.form-control(type='text',name="email",placeholder='Enter Email')
       .form-group
         input.form-control(type='password', name="password", placeholder='Password')
+      .div(class="g-recaptcha", data-sitekey="6LfvKxoTAAAAAEXazuiiRzpOrGwKR7MRdGod07pD")
       button.btn.btn-default(type='submit') Submit
       &nbsp;
       a(href='/')
         button.btn.btn-primary(type="button") Cancel
-
