--- a/views/register.jade
+++ b/views/register.jade
@@ -5,7 +5,7 @@ block content
     h1 Register Page
     p.lead Fill out the form and you're set!
     br
-    form(role='form', action="/register",method="post", style='max-width: 300px;')
+    form(role='form', action="/user/register",method="post", style='max-width: 300px;')
       .form-group
           input.form-control(type='text', name="fname", placeholder='First name')
       .form-group
